--- a/src/views/index.html
+++ b/src/views/index.html
@@ -14,6 +14,19 @@
     <link rel="icon" type="image/png" href="/images/favicon.png">
 </head>
 <body>
+    <!-- Header -->
+    <header class="header">
+        <div class="header-inner">
+            <nav class="nav">
+                <ul>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">ACCOUNT</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <!-- Welcome Container -->
     <div id="container" class="container">
         <!-- Lottie Animation -->
         <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script> 
