feat: Add Route for Account Page

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -19,8 +19,8 @@
         <div class="header-inner">
             <nav class="nav">
                 <ul>
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="#">ACCOUNT</a></li>
+                    <li><a href="/">HOME</a></li>
+                    <li><a href="/account">ACCOUNT</a></li>
                 </ul>
             </nav>
         </div>
