--- a/public/css/main.css
+++ b/public/css/main.css
@@ -154,7 +154,7 @@ body {
     left: 0;
 }
 
-.input-field i.showHidePw {
+.input-field i.showHidePassword {
     cursor: pointer;
     padding: 10px;
     right: 0;
