fix: Reduced Cursor and Drawing Offset

--- a/src/views/draw.html
+++ b/src/views/draw.html
@@ -10,7 +10,7 @@
 <body class="body">
     <div class = 'canvas-container'>
         <h1 id = "title-drawing">Miscommunication Mayhem</h1>
-        <canvas class = 'container drawing-canvas' id="drawing-canvas"></canvas>
+        <canvas class = 'drawing-canvas' id="drawing-canvas"></canvas>
     </div>
     
     <script src="/scripts/classes/draw.js"></script>
