--- a/public/css/draw.css
+++ b/public/css/draw.css
@@ -15,6 +15,8 @@
 
 /* The .drawing-canvas class applies styles to the canvas. */
 .canvas-container .drawing-canvas {
-    height: 70vh;
-    width: 60vw;
+    border-radius: 10px;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+    height: 80vh;
+    width: 70vw;
 }
