--- a/public/css/account.css
+++ b/public/css/account.css
@@ -2,7 +2,8 @@
 .account-container {
     background: #fff;
     border-radius: 10px;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1); */
+    box-shadow: 3px 3px 20px #003167; 
     margin: 0 20px;
     max-width: 430px;
     overflow: hidden;
@@ -24,7 +25,7 @@
 }
 
 .account-container .form .title::before {
-    background-color: #4070f4;
+    background-color: #003167;
     border-radius: 25px;
     bottom: 0;
     content: '';
