--- a/src/views/index.html
+++ b/src/views/index.html
@@ -27,7 +27,7 @@
     </header>
 
     <!-- Welcome Container -->
-    <div id="container" class="container">
+    <div id="container" class="container home-container">
         <!-- Lottie Animation -->
         <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script> 
 
