--- a/public/css/lobby.css
+++ b/public/css/lobby.css
@@ -9,3 +9,29 @@
 .lobby-button-container  > * {
     margin-right: 0px;
 }
+
+.room-code-container {
+    box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bolder;
+    margin: 0;
+    padding: 0;
+    font-size: larger;
+}
+
+.copy-button {
+    background-color: #0E7EFB;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 3px 3px 0px #003167;
+    color: #fff;
+    cursor: pointer;
+    font-size: 18px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 10px 10px;
+    transition: background-color 0.3s ease-in-out; /* Transition for button background-color */
+    width: 75%;
+}
