--- a/src/views/lobby.html
+++ b/src/views/lobby.html
@@ -23,7 +23,7 @@
 
         <div class = "lobby-button-container">
             <!-- Room joining form -->
-            <form id="joinRoomForm">
+            <form id="joinRoomForm" class = "lobby-button-container">
                 <div class = "input-box">
                     <i class="uil uil-keyboard icon"></i>
                     <input type="text" id="roomIdInput" placeholder="Enter lobby code">
@@ -39,7 +39,7 @@
 
     <!-- Load Socket.IO library -->
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/scripts/classes/client.js"></script>
+    <script type="module" src="/scripts/classes/client.js"></script>
 
 </body>
 </html>
