feat: Drawing Page Loaded when User Starts the Game

--- a/src/views/lobby.html
+++ b/src/views/lobby.html
@@ -37,6 +37,9 @@
     <div id="postLobbyCreationScreen" >
     </div>
 
+    <div id="drawingScreen">
+    </div>
+
     <!-- Load Socket.IO library -->
     <script src="/socket.io/socket.io.js"></script>
     <script type="module" src="/scripts/classes/client.js"></script>
