--- a/src/views/index.html
+++ b/src/views/index.html
@@ -40,7 +40,7 @@
         <p class="lead">A BROKEN TELEPHONE GAME</p>
         
         <!-- Button -->
-        <button id="enterWebsiteBtn" class="button">PLAY</button>
+        <button id="enterWebsiteBtn" class="button">Play</button>
     </div>
 
     <!-- Footer -->
