--- a/public/css/lobby.css
+++ b/public/css/lobby.css
@@ -1,29 +1,46 @@
-/* Lobby Button Container */
-.lobby-button-container {
-    display: flex;
+.button-container {
     align-items: center; /* Vertically center items */
+    display: flex;
+    flex-direction: column; /* Stack items vertically */
     justify-content: center; /* Center items vertically */
 }
 
-/* Margin to separate the input and button */
-.lobby-button-container  > * {
+.lobby-button-container {
+    align-items: center; /* Vertically center items */
+    display: flex;
+    justify-content: center; /* Center items vertically */
+}
+
+.lobby-left {
+    align-items: center; /* Vertically center items */
+    border-right: 2px solid #ccc;
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    justify-content: center; /* Center items vertically */
+    padding: 20px;
+}
+
+.lobby-right {
+    align-items: center; /* Vertically center items */
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    justify-content: left; /* Center items vertically */
+    padding: 20px;
+}
+
+.lobby-button-container > * {
     margin-right: 0px;
 }
 
 .room-code-container {
+    align-items: center; /* Vertically center items */
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
+    font-size: larger;
     font-weight: bolder;
+    justify-content: center; /* Center items vertically */
     margin: 0;
     padding: 0;
-    font-size: larger;
-    align-items: center; /* Vertically center items */
-    justify-content: center; /* Center items vertically */
-}
-
-.button-container {
-    display: flex;
-    align-items: center; /* Vertically center items */
-    flex-direction: column; /* Stack items vertically */
-    justify-content: center; /* Center items vertically */
 }
