--- a/src/views/account.html
+++ b/src/views/account.html
@@ -36,7 +36,7 @@
                 <form action="api/login" method="post">
                     <!-- Username input field -->
                     <div class="input-field">
-                        <input type="text" id="loginEmail" name="loginEmail" placeholder="Enter your username" required>
+                        <input type="text" id="loginEmail" name="loginEmail" placeholder="Enter your email" required>
                         <i class="uil uil-user icon"></i>
                     </div>
                     <!-- Password input field -->
