--- a/public/css/main.css
+++ b/public/css/main.css
@@ -95,6 +95,13 @@ body {
     width: 100%;
 }
 
+.copy-button {
+    border: 2px solid #003167;
+    margin-top: 15px;
+    text-align: center;
+    width: 100%;
+}
+
 .start-button {
     border: 2px solid #003167;
     background-color: #a6a6a6;
