--- a/public/css/main.css
+++ b/public/css/main.css
@@ -18,6 +18,10 @@ body {
     padding: 0;
 }
 
+.draw-body{
+    flex-direction: row;
+}
+
 /* Graident Background */
 
 @-webkit-keyframes gradientBackground {
@@ -106,6 +110,15 @@ body {
     border: 2px solid #003167;
     background-color: #a6a6a6;
     margin-top: 15px;
+    text-align: center;
+    width: 100%;
+}
+
+.draw-button {
+    border: 2px solid #003167;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding: 10px 10px;
     text-align: center;
     width: 100%;
 }
