feat: Added Drawing Pen Icon and Selection Name

--- a/src/views/draw.html
+++ b/src/views/draw.html
@@ -17,9 +17,9 @@
                 <label class='title-drawing'>Tool Selection</label>
                 <ul class='options'>
                     <!-- Tool option -->
-                    <li class='tool-option' id="tool-option-1">
-                        <i class="uil uil-pen"></i>
-                        <span>Option 1</span>
+                    <li class='tool-option' id="tool-option-1" onClick = 'pen()'>
+                        <img class="svg" id = 'pen-option' src="/images/pen.svg" alt="">
+                        <span>Pen</span>
                     </li>
 
                     <!-- Tool option -->
