feat: Added Eraser as an Option to Select

--- a/src/views/draw.html
+++ b/src/views/draw.html
@@ -18,14 +18,18 @@
                 <ul class='options'>
                     <!-- Tool option -->
                     <li class='tool-option' id="tool-option-1" onClick = 'pen()'>
+                        <!-- Icon for pen -->
                         <img class="svg" id = 'pen-option' src="/images/pen.svg" alt="">
+                        <!-- Label for pen -->
                         <span>Pen</span>
                     </li>
 
                     <!-- Tool option -->
-                    <li class='tool-option' id="tool-option-2">
-                        <i class="uil uil-edit"></i>
-                        <span>Option 2</span>
+                    <li class='tool-option' id="tool-option-2" onClick = 'eraser()'>
+                        <!-- Icon for eraser -->
+                        <img class="svg" id = 'eraser-option' src="/images/eraser.svg" alt="">
+                        <!-- Label for eraser -->
+                        <span>Eraser</span>
                     </li>
 
                     <!-- Button option -->
