--- a/public/css/account.css
+++ b/public/css/account.css
@@ -1,30 +1,47 @@
 /* Account Container */
+
+/* Account Container */
 .account-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Login and Signup Containers */
+.login-container {
+    display: block;
     background: #fff;
     border-radius: 10px;
-    /* box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1); */
-    box-shadow: 3px 3px 20px #003167; 
+    box-shadow: 3px 3px 20px #003167;
     margin: 0 20px;
     max-width: 430px;
     overflow: hidden;
-    position: relative;
-    width: 100%;
-}
-
-.account-container .form {
-    background-color: #fff;
     padding: 30px;
-    transition: margin-left 0.18s ease;
     width: 50%;
+    transition: transform 0.5s ease-in-out;
 }
 
-.account-container .form .title {
+.signup-container {
+    display: none;
+    background: #fff;
+    border-radius: 10px;
+    box-shadow: 3px 3px 20px #003167;
+    margin: 0 20px;
+    max-width: 430px;
+    overflow: hidden;
+    padding: 30px;
+    width: 50%;
+    transition: transform 0.5s ease-in-out;
+}
+
+.title {
     font-size: 27px;
     font-weight: 600;
     position: relative;
 }
 
-.account-container .form .title::before {
+.title::before {
     background-color: #003167;
     border-radius: 25px;
     bottom: 0;
@@ -35,36 +52,23 @@
     width: 30px;
 }
 
-.account-container .forms {
-    align-items: center;
-    display: flex;
-    height: 440px;
-    transition: height 0.2s ease;
-    width: 200%;
-}
-
-.account-container.active .forms {
-    height: 600px;
-}
-
-.account-container.active .login {
-    margin-left: -50%;
-    opacity: 0;
-    transition: margin-left 0.18s ease, opacity 0.15s ease;
-}
-
-.account-container.active .signup {
-    opacity: 1;
-    transition: opacity 0.2s ease;
-}
-
-/* Account Form */
-.form .input-field {
+.input-field {
     height: 50px;
     margin-top: 30px;
     position: relative;
     width: 100%;
 }
+
+/* Slide out to the left animation */
+@keyframes slideOutToLeft {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(-100%);
+    }
+}
+
 
 .login-signup {
     margin-top: 15px;
@@ -77,4 +81,52 @@
     font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
+}
+
+/* Guest Container */
+.guest-container {
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 3px 3px 20px #003167;
+    display: none;
+    margin: 0 20px;
+    max-width: 430px;
+    overflow: hidden;
+    padding: 30px;
+    width: 50%;
+    transition: transform 0.5s ease-in-out;
+}
+
+.guest-container .title {
+    font-size: 27px;
+    font-weight: 600;
+    position: relative;
+}
+
+.guest-container .title::before {
+    background-color: #003167;
+    border-radius: 25px;
+    bottom: 0;
+    content: '';
+    height: 3px;
+    left: 0;
+    position: absolute;
+    width: 30px;
+}
+
+.guest-container .input-field {
+    height: 50px;
+    margin-top: 30px;
+    position: relative;
+    width: 100%;
+}
+
+/* Slide out to the left animation */
+@keyframes slideOutToLeft {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(-100%);
+    }
 }
