feat: Add field for user to add guest account name

--- a/src/views/account.html
+++ b/src/views/account.html
@@ -27,7 +27,12 @@
 
     <!-- Guest container -->
     <div class="guest-container">
-        <span class="title">Guest Information</span>
+        <span class="title">Guest Login</span>
+        <!-- Username input field -->
+        <div class="input-field">
+            <input type="text" id="guestUsername" name="guestUsername" placeholder="Enter temporary username" required>
+            <i class="uil uil-user icon"></i>
+        </div>
         <!-- Button -->
         <button id="guestButton" class="button account-button">Continue as Guest</button>
         <!-- Link to login form -->
