feat: Add Countdown to Indicate Time Left to Draw

--- a/src/views/draw.html
+++ b/src/views/draw.html
@@ -47,6 +47,14 @@
         <div class='canvas-container'>
             <canvas class='drawing-canvas' id="drawing-canvas"></canvas>
         </div>
+
+        <div class = 'tool-box timer-container'>
+            <div class='row'>
+            <p class = 'title-drawing' id = 'timer-label'> Time Remaining:</p>
+            <p class = 'countdown-timer' id = "countdownTimer"></p>
+            </div>
+        </div>
+        
     </div>
 
     <script src="/scripts/classes/draw.js"></script>
