--- a/public/css/main.css
+++ b/public/css/main.css
@@ -89,6 +89,19 @@ body {
     width: 25%;
 }
 
+.cookie-button {
+    background-color: #0E7EFB;
+    border: none;
+    border-radius: 5px;
+    color: #fff;
+    cursor: pointer;
+    letter-spacing: 1px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 10px 10px;
+    transition: background-color 0.3s ease-in-out; /* Transition for button background-color */
+}
+
 .account-button {
     border: 2px solid #003167;
     margin-top: 15px;
@@ -295,4 +308,15 @@ body {
     left: 0;
     position: absolute;
     width: 30px;
+}
+
+.cookie-bar {
+    position: relative; 
+    bottom: 0; 
+    left: 0; 
+    width: 100%; 
+    background-color: #f2f2f2; 
+    padding: 10px; 
+    text-align: center; 
+    display: block;
 }
