--- a/public/css/main.css
+++ b/public/css/main.css
@@ -89,7 +89,7 @@ body {
     width: 25%;
 }
 
-.cookie-button {
+/* .cookie-button {
     background-color: #0E7EFB;
     border: none;
     border-radius: 5px;
@@ -99,8 +99,8 @@ body {
     margin-top: 10px;
     margin-bottom: 10px;
     padding: 10px 10px;
-    transition: background-color 0.3s ease-in-out; /* Transition for button background-color */
-}
+    transition: background-color 0.3s ease-in-out;
+} */
 
 .account-button {
     border: 2px solid #003167;
@@ -310,13 +310,42 @@ body {
     width: 30px;
 }
 
-.cookie-bar {
-    position: relative; 
-    bottom: 0; 
-    left: 0; 
-    width: 100%; 
-    background-color: #f2f2f2; 
-    padding: 10px; 
-    text-align: center; 
-    display: block;
+.cookieConsentBanner {
+    align-items: center; /* Center align content */
+    background-color: #333; /* Darker background color */
+    bottom: 0;
+    box-shadow: 0px -2px 10px rgba(0, 0, 0, 0.1); /* Shadow for better visibility */
+    color: #fff; /* Text color */
+    display: flex; /* Center align content */
+    font-family: 'Roboto', sans-serif; /* Ensure consistency with other text */
+    gap: 10px; /* Space between elements */
+    justify-content: center; /* Space between content */
+    left: 0;
+    padding: 15px; /* Increased padding */
+    position: fixed;
+    text-align: center;
+    width: 100%;
+    z-index: 9999; /* Ensure it's above other content */
+}
+
+.cookieConsentBanner p {
+    margin: 0; /* Remove default margin */
+}
+
+.cookie-button {
+    background-color: #4CAF50; /* Green button */
+    border: none;
+    border-radius: 5px;
+    color: white; /* Button text color */
+    cursor: pointer;
+    display: inline-block;
+    font-size: 16px;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    transition: background-color 0.3s; /* Smooth transition */
+}
+
+.cookie-button:hover {
+    background-color: #45a049; /* Darker green on hover */
 }
