--- a/src/views/index.html
+++ b/src/views/index.html
@@ -49,7 +49,7 @@
     </footer>
 
     <!-- Cookie Consent Banner -->
-    <div id="cookieConsentBanner" style="position: fixed; bottom: 0; left: 0; width: 100%; background-color: #ffffff; padding: 10px; text-align: center; display: block;">
+    <div id="cookieConsentBanner" class="cookieConsentBanner">
         This website uses cookies to ensure you get the best experience on our website.
         <button onclick="acceptCookies()" class="cookie-button">Accept</button>
     </div>
